# RelQL

./: .gitignore  MODEL_CARD.md  PQL_EVOLUTION.md  PRODUCT.md  README.md  REFERENCE_ALIGNMENT_IMPLEMENTATION.md  RELATIONAL_TRANSFORMER_COMPARISON.md  RELATIVEDB_IMPROVEMENT_ROADMAP.md  STYLE.md  todo.md
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  duckdb-extension.yml  release-libraries.yml
.mari/: config.json
benchmarks/: FINDINGS.md  README.md  run.py  run_suite.py
benchmarks/gh/: candidates.csv  data.py  export_ref.py  labels.py  report.html  results.json  retention.py  retention_results.json  run.py  run_ref.py
benchmarks/harness/: __init__.py  audit_fixes.py  audit_grammar.py  audit_leakage.py  backtest.py  datasets.py  metrics.py  suite.py
benchmarks/olist/: data.py  metrics.py  report.html  results.json  run.py  runners.py  tasks.py
benchmarks/task_fit/: README.md  brightkite_clf_reg.py  churn_rtj_with_rfm_cells.py  churn_spend_rtj.py  churn_spend_xgboost.py  data_efficiency.py  digits_head.safetensors  digits_metal_finetune.py  digits_results.json  olist_metal_vs_xgboost.py  olist_results.json  olist_review_head.safetensors  ranking_buy_it_again.py
benchmarks/xlang_fixture/: README.md  embeddings.tsv  golden.json  movies.tsv  ratings.tsv
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/src/: bench.cpp  csc.cpp  csc.hpp  csc_c.cpp  csc_c.h  pql.cpp  pql.hpp  pql_c.cpp  pql_c.h  quantize.cpp  relql.cpp  relql.hpp  relql_c.cpp  relql_c.h  rt.cpp  rt.hpp  rt_c.cpp  rt_c.h  rt_cuda.cu  rt_full_train_metal.mm  rt_internal.hpp  rt_math.hpp  rt_metal.mm  rt_quant.hpp  rt_train.cpp  rt_train.hpp  rt_train_metal.mm  test_csc.cpp  test_golden.cpp  test_pql.cpp  test_relql.cpp  test_train.cpp
cpp/testdata/: manifest.json
cpp/tools/: dump_golden.py
evaluation/: README.md  __init__.py  catalog.py  config.example.json  config.rel-f1-extra-queries.json  config.rel-f1.json  continue_native_full_driver_top3.sh  f1_extra_queries.py  f1_relql.py  head_to_head.py  multi_target_prototype.py  reference_tasks.py  relativedb_runner.py  run_native_on_reference.py  run_reference_rt.py  run_relql_f1.py  run_xgboost_reference.py  train_heads_on_reference.py  train_native_full.py  xgboost_worker.py
evaluation/fixtures/: rel-f1-reference-graph-order.npz
examples/: bench_naive_vs_csc.py
examples/industry/: README.md  bizops_demand_forecast.py  fraud_chargeback.py  growth_churn.py  pandas_connector.py  pzn_buy_it_again.py
java/: README.md  build.gradle  settings.gradle
java/relativedb-core/: build.gradle
java/relativedb-core/src/main/antlr/: Pql.g4
java/relativedb-core/src/main/java/com/relativedb/csc/: NativeCsc.java
java/relativedb-core/src/main/java/com/relativedb/engine/: ContextAssembler.java  ContextGraph.java  ContextPolicy.java  ContextSource.java  CscIndex.java  EvaluationResult.java  ExecutionInput.java  ExplainResult.java  Instrumentation.java  Metric.java  PredictionResult.java  RelativeDbEngine.java  RetrieverContextSource.java  ReturnShaper.java  SamplerMode.java
java/relativedb-core/src/main/java/com/relativedb/model/: ModelBackend.java  ModelCapabilities.java  ModelConfig.java  ModelOutput.java  TokenBatch.java
java/relativedb-core/src/test/java/com/relativedb/: ContextAssemblerTest.java  CscIndexTest.java  EngineExecuteTest.java  ExplainAsOfTest.java  GrowthChurnExampleTest.java  ModelConfigTest.java  MulticlassRankingTest.java  NativeCscConformanceTest.java  PqlParserTest.java  PqlValidationTest.java  ReturnClauseTest.java  SchemaTest.java  TestData.java
java/relativedb-core/src/test/java/dev/relativedb/: ContextAssemblerTest.java  CscIndexTest.java  EngineExecuteTest.java  GrowthChurnExampleTest.java  ModelConfigTest.java  PqlParserTest.java  PqlValidationTest.java  SchemaTest.java  TestData.java
java/relativedb-core/src/test/resources/: examples.pql
java/relativedb-rt/: build.gradle
python/: README.md  build_wheel.sh  pyproject.toml  release_smoke.py  setup.py
python/src/relativedb/: __init__.py  columnar.py  csc.py  csc_native.py  engine.py  evaluate.py  model.py  pandas_io.py  retrieve.py  rt_native.py  schema.py  task.py  traversal.py
python/src/relativedb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/relativedb/pql/: __init__.py  ast.py  native.py  parser.py
python/src/relativedb/relql/: __init__.py  ast.py  native.py  parser.py
python/tests/: conftest.py  test_engine.py  test_evaluation.py  test_explain_asof.py  test_from_dataframes.py  test_native_csc.py  test_normalization_task_traversal.py  test_pql_parser.py  test_relql_parser.py  test_rt_native.py  test_shared_overlay.py  test_xlang_parity.py
python/tests/data/: examples.relql
rust/: Cargo.toml  README.md
rust/relativedb/: Cargo.toml
rust/relativedb/examples/: xlang_rank.rs
rust/relativedb/src/: csc.rs  csc_native.rs  engine.rs  evaluate.rs  lib.rs  model.rs  native.rs  retrieve.rs  schema.rs
rust/relativedb/src/pql/: ast.rs  mod.rs  native.rs  parser.rs  validate.rs
rust/relativedb/tests/: engine_tests.rs  golden_tests.rs  native_csc_tests.rs  native_tasks_tests.rs  parser_tests.rs  xlang_parity.rs
rust/relativedb/tests/common/: mod.rs
rust/relativedb/tests/data/: examples.pql
website/: docusaurus.config.ts  sidebars-pql.ts  sidebars-relql.ts  sidebars.ts
website/docs/: intro.md  rt.md
website/docs/concepts/: architecture.md  model-backends.md  relational-transformers.md  retrievers.md  sampler-modes.md  temporal-correctness.md
website/docs/contributing/: releases.md
website/docs/getting-started/: installation.md  quickstart.mdx
website/docs/how-to/: choose-sampler-mode.md  forecast-demand.md  predict-churn.md  rank-recommendations.md  use-native-backend.md  wire-custom-retrievers.md
website/docs/libraries/: cpp.md  java.md  python.md  rust.md
website/pql/: cookbook.md  index.md  tutorial.md
website/pql/reference/: aggregations.md  conditions.md  query-structure.md  task-types.md
website/relql/: index.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
(+127 files in other folders)
