[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relationdb"
version = "0.1.0"
description = "Predictive queries (RelQL) over your own data: GraphQL-style user-defined retrievers, no bundled database connectors."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "relationdb contributors" }]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://relql.com"
Repository = "https://github.com/RelativeDB/RelQL"
Issues = "https://github.com/RelativeDB/RelQL/issues"

[project.optional-dependencies]
rt = ["sentence-transformers>=3.0", "huggingface_hub>=0.23"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
