[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relativedb"
version = "0.2.0"
description = "Predictive queries (RelQL) over your own data: GraphQL-style user-defined retrievers, no bundled database connectors."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "relativedb contributors" }]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=3.0",
    "huggingface_hub>=0.23"
]

[project.urls]
Homepage = "https://relql.com"
Repository = "https://github.com/RelativeDB/RelQL"
Issues = "https://github.com/RelativeDB/RelQL/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

# The native engine (librt_c) is bundled into the wheel when present next to
# the package sources (see build_wheel.sh); rt_native/csc_native look for it
# in-package first. setup.py tags the wheel platform-specific iff bundled;
# librt_c is loaded via ctypes so any CPython 3 works (py3-none-<platform>).
[tool.setuptools.package-data]
relativedb = ["librt_c.dylib", "librt_c.so", "librt_c.dll", "rt_c.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
