[package]
name = "relationdb"
version = "0.1.0"
edition = "2021"
description = "Predictive queries (RelQL) over your own data — the Rust peer of the Java (com.relativedb) and Python (relativedb) libraries. GraphQL-style execution: the engine owns the query language, planning, context assembly, and model routing; all data access goes through user-defined retrievers."
license = "Apache-2.0"
repository = "https://github.com/RelativeDB/RelQL"
homepage = "https://relql.com"
readme = "../README.md"
keywords = ["database", "machine-learning", "predictive", "query"]
categories = ["database", "science"]

[lib]
# Keep the established Rust API while publishing the distribution as `relationdb`.
name = "relativedb"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
libloading = "0.8"

[dev-dependencies]
serde_json = "1.0"
